feat: basic mobile layout

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,47 @@
 /* styles.css */
 body {
-  background-color: rebeccapurple;
+  background-color: #ecfeff;
+}
+
+.image-container {
+  position: relative;
+  display: inline-block;
+  text-align: start;
+  padding: 20px;
+
+  /* ****************** */
+  width: 280px;
+  height: auto;
+}
+
+.image-container img {
+  width: 100%;
+  height: auto;
+}
+
+.image-text {
+  position: absolute;
+  top: 87%;
+  left: 37%;
+  transform: translate(-50%, -50%);
+  color: #ecfeff;
+  font-size: 44px;
+  font-weight: bold;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+}
+
+main {
+  margin: 20px;
+}
+
+.projects {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.project {
+  width: 280px;
+  height: 380px;
+  background-color: orange;
 }
