feat: main 2 column

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,8 @@ body {
 
 header,
 main,
-footer {
+footer,
+.headerCard {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,8 +26,8 @@ header {
 /* Background block behind header image */
 .background-block {
   position: absolute;
-  top: -45%; /* Adjust to position behind the image */
-  left: -100%;
+  top: -25%; /* Adjust to position behind the image */
+  left: -50%;
   width: 1000px; /* Slightly larger than the image */
   height: 570px;
   background-color: #06b6d4; /* Customize as needed */
@@ -53,7 +54,7 @@ header {
 
 .image-text {
   position: absolute;
-  top: 88%;
+  top: 82%;
   left: 36%;
   transform: translate(-50%, -50%);
   color: #eff6ff;
@@ -65,7 +66,9 @@ header {
 .title.about {
   margin-top: 20px;
   margin-bottom: 10px;
-  font-size: 34px;
+  font-size: 30px;
+
+  text-align: center;
 }
 
 .text {
@@ -190,7 +193,7 @@ footer img {
   align-self: center;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 600px) {
   header {
     padding: 80px;
   }
@@ -201,16 +204,16 @@ footer img {
 
   /* Background block behind header image */
   .background-block {
-    top: -70%; /* Adjust to position behind the image */
-    left: -40%;
+    top: -75%; /* Adjust to position behind the image */
+    left: -20%;
     width: 1500px;
-    transform: rotate(-20deg);
+    transform: rotate(-10deg);
   }
 
   .headerCard {
+    display: block;
     background-color: #eff6ff;
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3); /* Lifting effect */
-    /* position: relative; */
   }
 
   .image-container {
@@ -232,14 +235,19 @@ footer img {
 
   .image-text {
     position: absolute;
-    top: -20%;
-    left: 166%;
+    top: -25%;
+    left: 136%;
     transform: translate(-50%, -50%);
     color: #eff6ff;
     font-size: 44px;
     font-weight: 400;
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
-
     white-space: nowrap;
+  }
+
+  .projects {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 35px;
   }
 }
